# langchain-py

./: .env.example  .gitignore  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
m1/: chains1-8.py  format1-7.py  format1-72.py  main.py  main2.py  prompt_template1-6.py  runnables1-5.py  stream.py
m2/: nodos2-1.py  nodos2-2.py
m3/: chromaDB.py  chunk.py  chunk_token.py  load.py  main.py
m3/chromadb.db/89e26a70-a5f3-4175-99d6-81fdbe3460ed/: index_metadata.pickle
