[project]
name = "langchain-py"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Erick Cruz", email = "crzerick6@gmail.com"},
]
dependencies = ["dotenv>=0.9.9"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
serve = "flask run"
